<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    tools:context="fr.geonature.datasync.features.settings.presentation.ConfigureServerSettingsActivity">

    <TextView
        android:id="@android:id/title"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/settings_server_configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_server_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/settings_server_url_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@android:id/title"
        app:prefixText="https://"
        app:startIconDrawable="@drawable/ic_geonature_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_validate"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_server_url"
        app:layout_constraintStart_toStartOf="@+id/edit_text_server_url"
        app:layout_constraintTop_toBottomOf="@id/edit_text_server_url" />

    <Button
        android:id="@+id/button_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/settings_server_url_action_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>