<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    tools:context="fr.geonature.datasync.ui.login.LoginActivity">

    <ImageView
        android:id="@android:id/icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person"
        app:tint="@android:color/background_light"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="24dp"
        android:hint="@string/login_login_hint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@android:id/icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="24dp"
        android:hint="@string/login_password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:text="@string/login_action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintVertical_bias="0.25" />

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

</androidx.constraintlayout.widget.ConstraintLayout>